--- a/ir2017/pom.xml
+++ b/ir2017/pom.xml
@@ -31,5 +31,13 @@
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.github.rholder/snowball-stemmer -->
+		<dependency>
+			<groupId>com.github.rholder</groupId>
+			<artifactId>snowball-stemmer</artifactId>
+			<version>1.3.0.581.1</version>
+		</dependency>
+
 	</dependencies>
 </project>
