--- a/ir2017/pom.xml
+++ b/ir2017/pom.xml
@@ -25,6 +25,7 @@
 	</build>
 
 	<dependencies>
+	
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -37,6 +38,20 @@
 			<groupId>com.github.rholder</groupId>
 			<artifactId>snowball-stemmer</artifactId>
 			<version>1.3.0.581.1</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.5</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.10</version>
 		</dependency>
 
 	</dependencies>
